--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,7 @@ body {
   background-color: rgb(149, 207, 41);
   margin-left: 40px;
   position: relative;
+  width: 200px;
 }
 .navigation_menu li:first-child {
   margin: 0;
@@ -96,31 +97,47 @@ body {
 }
 .display_menu {
   position: absolute;
-  top: 100%;
+  top: -400%;
   left: 0;
   padding: 10px 0px;
-  display: none;
+  transition: top 3s cubic-bezier(0.63, -0.62, 0.59, 1.67);
+}
+.navigation_menu li:hover .display_menu {
+  top: 100%;
 }
 .display_menu li {
   margin: 0;
   position: relative;
   display: block;
+  background: rgb(149, 207, 41);
+  transition: background 1s ease-in-out;
 }
-.navigation_menu li:hover .display_menu {
+.display_menu li:hover {
+  background-color: green;
+}
+.display_menu li a {
   display: block;
+  color: yellow;
+  text-transform: lowercase;
+  transition: color 2s ease-in, text-transform 2s linear 1s;
+}
+.display_menu li a:hover {
+  color: white;
+  text-transform: uppercase;
 }
 .float_menu {
   position: absolute;
   top: 0;
   right: 100%;
   padding: 0 40px;
-  display: none;
 }
 .float_menu li {
   margin: 0;
+  transition: all 2s cubic-bezier(0.42, 0, 0.58, 1);
+  transform: scale(0, 1) rotate(3turn);
 }
-.display_menu li:hover .float_menu {
-  display: block;
+.display_menu li:hover .float_menu li {
+  transform: scale(1, 1);
 }
 .content_list {
   list-style-type: square;
@@ -227,5 +244,95 @@ blockquote {
   background-position: -250px -170px;
 }
 .footer_navigation li + li + li + li + li + li a {
+  background-position: -170px -170px;
+}
+.socials_wrapper {
+  position: fixed;
+  display: flex;
+  height: 300px;
+  width: 100px;
+  right: 0;
+  top: 50%;
+  margin-top: -150px;
+  background: lightskyblue;
+  border: 2px solid mediumorchid;
+  font-size: 0;
+  transition: all 2s ease-in-out;
+}
+.socials_wrapper:hover {
+  background-color: rgb(28, 173, 28);
+  width: 400px;
+}
+.button_wrapper {
+  position: relative;
+  height: 300px;
+  flex: 0 0 100px;
+  right: 0;
+  top: 50%;
+  margin-top: -150px;
+}
+.button {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100px;
+  border-right: 2px solid mediumorchid;
+}
+.button p {
+  position: absolute;
+  bottom: 50%;
+  left: -25px;
+  right: -25px;
+  font-size: 30px;
+  transform: rotate(-90deg);
+}
+.socials {
+  position: relative;
+  flex: 0 0 250px;
+}
+.socials_icons {
+  position: absolute;
+  left: 50px;
+  top: 25%;
+  display: flex;
+  flex-wrap: wrap;
+  transform: rotate(45deg);
+}
+.socials_icons li {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.socials_icons a {
+  display: block;
+  position: relative;
+  height: 80px;
+  width: 80px;
+  background-color: mediumspringgreen;
+  overflow: hidden;
+}
+.socials_icons a:hover {
+  background-color: lightskyblue;
+}
+.socials_icons a::before {
+  display: inline-block;
+  background-image: url("../img/css_sprites.png");
+  background-position: -10px -170px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 60px;
+  height: 60px;
+  content: "";
+  transform: rotate(-45deg);
+}
+.socials_icons li + li a::before {
+  background-position: -250px -90px;
+}
+.socials_icons li + li + li a::before {
+  background-position: -170px -10px;
+}
+.socials_icons li + li + li + li a::before {
   background-position: -170px -170px;
 }
